--- a/suscribete.html
+++ b/suscribete.html
@@ -9,5 +9,7 @@
     <input type="number" name="edad" id=""><br>
     <label for="noti">Desea recibir notificaciones</label>
     <input type="checkbox" name="noti" id="">
-
-</form>
+</form> <br>
+<p>
+    Derechos reservados &copy;
+</p>
