se agregan botones de regreso al inicio

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
     <h1>Terminos y Condiciones</h1>
     
     <form action="">
-        <label for="tyc"> Acepto Terminos y Condiciones </label>
+        <label for="tyc" style="font-size: large;"> Acepto Terminos y Condiciones </label>
             <input type="checkbox" name="tyc" id="">
     </form>
-    <a href="tycon.html">Ver terminos y Condiciones</a>
+    <a href="tycon.html" style="font-size: medium;">Ver terminos y Condiciones</a>
 </footer>
 </body>
 </html>
