--- a/suscribete.html
+++ b/suscribete.html
@@ -1,15 +1,28 @@
-<h1 style="font-size: xx-large; text-align: center; color: red;">Suscribete a Nuestra Revista</h1>
-<p style="font-size: x-large;">Danos tus Datos</p>
-<form action="">
-    <label for="nombre">Cual es tu nombre</label>
-    <input type="text" name="nombre" id=""><br>
-    <label for="mail">Cual es tu email</label>
-    <input type="email" name="mail" id=""><br>
-    <label for="edad">Cual es tu nombre</label>
-    <input type="number" name="edad" id=""><br>
-    <label for="noti">Desea recibir notificaciones</label>
-    <input type="checkbox" name="noti" id="">
-</form> <br>
-<p>
-    Derechos reservados &copy;
-</p>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Esta pagina es para suscribirte a la revista">
+    <meta name="author" content="Fernando Chapa">
+</head>
+<body>
+    <h1 style="font-size: xx-large; text-align: center; color: red;">Suscribete a Nuestra Revista</h1>
+    <p style="font-size: x-large;">Danos tus Datos</p>
+    <form action="">
+        <label for="nombre">Cual es tu nombre</label>
+        <input type="text" name="nombre" id=""><br>
+        <label for="mail">Cual es tu email</label>
+        <input type="email" name="mail" id=""><br>
+        <label for="edad">Cual es tu nombre</label>
+        <input type="number" name="edad" id=""><br>
+        <label for="noti">Desea recibir notificaciones</label>
+        <input type="checkbox" name="noti" id="">
+    </form> <br>
+    <p>
+        Derechos reservados &copy;
+    </p>
+    <center><a href="index.html" style="font-size: larger;"> Volver al inicio</a></center>
+</body>
+</html>
