--- a/conocenos.html
+++ b/conocenos.html
@@ -1,14 +1,29 @@
-<h1>¿Quienes somos?</h1>
-<p style="font-size: larger;">Somos una organizacion que quiere dar a conocer lo importante que son algunas especies en nuestro ecosistema, principalmente aquellas
-que son representativas de nuestra cultura y un estandarte a nivel mundial.
-</p>
-<h1>Nuestra mision</h1>
-<p style="font-size: larger;">
-    Nuestra mision es ser una organizacion que se preocupa por las probleaticas mundiales actueales como lo es el riesgo
-    que corre la especie del ajolote. <br>
-    Una especie clave en ecosistemas esoecificos en nuestro pais, y que mas alla de ello representa una identidad nacional.
-    <br>
-    A través de nuestra investigacion promovemos el conocimiento y el interes por conocer, respetar y amar una de las especies mas bonitas de este mundo.
-</p>
-<p style="font-size: x-large; text-align: center;">El Ajolote Mexicano</p>
-<center><img width="280px" src="https://thumbs.dreamstime.com/b/un-lindo-personaje-de-caricatura-animal-axolotl-con-sombrero-mexicano-ilustraci%C3%B3n-del-dibujos-animados-animales-211797453.jpg" alt="representacion del ajolote Mexicano"></center>
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="En esta pagina damos a conocer quien es nuestra organizacion">
+    <meta name="author" content="Fernando Chapa">
+    <title>Ajolotes En Mexico</title>
+</head>
+<body>
+    <h1>¿Quienes somos?</h1>
+    <p style="font-size: larger;">Somos una organizacion que quiere dar a conocer lo importante que son algunas especies en nuestro ecosistema, principalmente aquellas
+    que son representativas de nuestra cultura y un estandarte a nivel mundial.
+    </p>
+    <h1>Nuestra mision</h1>
+    <p style="font-size: larger;">
+        Nuestra mision es ser una organizacion que se preocupa por las probleaticas mundiales actueales como lo es el riesgo
+        que corre la especie del ajolote. <br>
+        Una especie clave en ecosistemas esoecificos en nuestro pais, y que mas alla de ello representa una identidad nacional.
+        <br>
+        A través de nuestra investigacion promovemos el conocimiento y el interes por conocer, respetar y amar una de las especies mas bonitas de este mundo.
+    </p>
+    <p style="font-size: x-large; text-align: center;">El Ajolote Mexicano</p>
+    <center><img width="280px" src="https://thumbs.dreamstime.com/b/un-lindo-personaje-de-caricatura-animal-axolotl-con-sombrero-mexicano-ilustraci%C3%B3n-del-dibujos-animados-animales-211797453.jpg" alt="representacion del ajolote Mexicano"></center>
+    <center><a href="index.html" style="font-size: larger;"> Volver al inicio</a></center> 
+</body>
+</html>
