--- a/contacto.html
+++ b/contacto.html
@@ -1,25 +1,38 @@
-<h1 style="color: rgb(8, 8, 8);">Contactanos!!</h1>
 
-<p style="font-size: x-large;">El nombre de la Organizacion: es Ajolotes por México</p>
-<p style="font-size: x-large;">Nuestro telefono es: 8125649730</p>
-<p style="font-size: x-large;">Nuestro correo electrónico: AjolotesMeX@gmail.com</p>
-<p style="font-size: x-large;">Nuestra ubicación: Zona centro San Nicolas, 1044</p>
-<p style="font-size: xx-large; text-align: center; color: rgb(7, 7, 7);">Redes Sociales</p>
-<table border="2" style="font-size: larger; background-color: aquamarine;">
-    <tr>
-        <th>Red Social</th>
-        <th>Usuario</th>
-    </tr>
-    <tr>
-        <th>Facebook</th>
-        <th>Ajolotes por Mexico</th>
-    </tr>
-    <tr>
-        <th>Instagram</th>
-        <th>Ajolotes_Mexico</th>
-    </tr>
-    <tr>
-        <th>Tiktok</th>
-        <th>AjolotesMX</th>
-    </tr>
-</table>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="En esta pagina damos nuestro contacto a la gente">
+    <meta name="author" content="Fernando Chapa">
+</head>
+<body>
+    <h1 style="color: rgb(8, 8, 8);">Contactanos!!</h1>
+    <p style="font-size: x-large;">El nombre de la Organizacion: es Ajolotes por México</p>
+    <p style="font-size: x-large;">Nuestro telefono es: 8125649730</p>
+    <p style="font-size: x-large;">Nuestro correo electrónico: AjolotesMeX@gmail.com</p>
+    <p style="font-size: x-large;">Nuestra ubicación: Zona centro San Nicolas, 1044</p>
+    <p style="font-size: xx-large; text-align: center; color: rgb(7, 7, 7);">Redes Sociales</p>
+    <table border="2" style="font-size: larger; background-color: aquamarine;">
+        <tr>
+            <th>Red Social</th>
+            <th>Usuario</th>
+        </tr>
+        <tr>
+            <th>Facebook</th>
+            <th>Ajolotes por Mexico</th>
+        </tr>
+        <tr>
+            <th>Instagram</th>
+            <th>Ajolotes_Mexico</th>
+        </tr>
+        <tr>
+            <th>Tiktok</th>
+            <th>AjolotesMX</th>
+        </tr>
+    </table>
+    <center><a href="index.html" style="font-size: larger;"> Volver al inicio</a></center>
+</body>
+</html>
