error de escritura

--- a/suscribete.html
+++ b/suscribete.html
@@ -15,10 +15,11 @@
         <input type="text" name="nombre" id=""><br>
         <label for="mail">Cual es tu email</label>
         <input type="email" name="mail" id=""><br>
-        <label for="edad">Cual es tu nombre</label>
+        <label for="edad">Cual es tu Edad</label>
         <input type="number" name="edad" id=""><br>
         <label for="noti">Desea recibir notificaciones</label>
-        <input type="checkbox" name="noti" id="">
+        <input type="checkbox" name="noti" id=""> <br>
+        <input style="font-size: medium;" type="button" value="Enviar">
     </form> <br>
     <p>
         Derechos reservados &copy;
