terminamos la pagina

--- a/contacto.html
+++ b/contacto.html
@@ -14,25 +14,30 @@
     <p style="font-size: x-large;">Nuestro telefono es: 8125649730</p>
     <p style="font-size: x-large;">Nuestro correo electrónico: AjolotesMeX@gmail.com</p>
     <p style="font-size: x-large;">Nuestra ubicación: Zona centro San Nicolas, 1044</p>
-    <p style="font-size: xx-large; text-align: center; color: rgb(7, 7, 7);">Redes Sociales</p>
-    <table border="2" style="font-size: larger; background-color: aquamarine;">
-        <tr>
-            <th>Red Social</th>
-            <th>Usuario</th>
-        </tr>
-        <tr>
-            <th>Facebook</th>
-            <th>Ajolotes por Mexico</th>
-        </tr>
-        <tr>
-            <th>Instagram</th>
-            <th>Ajolotes_Mexico</th>
-        </tr>
-        <tr>
-            <th>Tiktok</th>
-            <th>AjolotesMX</th>
-        </tr>
-    </table>
+    <center>
+        <p style="font-size: xx-large; color: rgb(7, 7, 7);">Redes Sociales</p>
+    </center>
+        <center>
+            <table border="2" style="font-size: larger; background-color: aquamarine;">
+                <tr>
+                    <th>Red Social</th>
+                    <th>Usuario</th>
+                    <th rowspan="4"><img width="250" src="https://thumbs.dreamstime.com/b/axolotl-personaje-sonriente-rosa-mexicano-monstruo-de-agua-anfibio-lindo-drag%C3%B3n-salamandra-dibujos-animados-fondo-azul-218948049.jpg" alt=""></th>
+                </tr>
+                <tr>
+                    <th>Facebook</th>
+                    <th>Ajolotes por Mexico</th>
+                </tr>
+                <tr>
+                    <th>Instagram</th>
+                    <th>Ajolotes_Mexico</th>
+                </tr>
+                <tr>
+                    <th>Tiktok</th>
+                    <th>AjolotesMX</th>
+                </tr>
+            </table>
+        </center>
     <center><a href="index.html" style="font-size: larger;"> Volver al inicio</a></center>
 </body>
 </html>
