--- a/suscribete.html
+++ b/suscribete.html
@@ -21,9 +21,15 @@
         <input type="checkbox" name="noti" id=""> <br>
         <input style="font-size: medium;" type="button" value="Enviar">
     </form> <br>
+    <form action="">
+        <label for="tyc" style="font-size: large;"> Acepto Terminos y Condiciones </label>
+            <input type="checkbox" name="tyc" id="">
+    </form>
+    <a href="tycon.html" style="font-size: larger;">Ver terminos y Condiciones</a>
     <p>
         Derechos reservados &copy;
     </p>
+    <center><img width="250" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcQqqdZZZdYpQH-l71PXGWhfHzUIA6aU1lite8Vt_9jU8B33Gqlg" ></center>
     <center><a href="index.html" style="font-size: larger;"> Volver al inicio</a></center>
 </body>
 </html>
