--- a/tycon.html
+++ b/tycon.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     
-    <h1 style="font-size: xx-large;"> Terminos y Condiciones Ajolotes por Mexico</h1>
-    <p style="font-size: large;"><strong>TÉRMINOS Y CONDICIONES DE USO</strong> <br></p>
+    <h1 style="font-size: xx-large;"> Terminos y Condiciones <abbr title="Ajolotes Por Mexico">AM</abbr></h1>
+    <p style="font-size: large;"><mark>TÉRMINOS Y CONDICIONES DE USO</mark> <br></p>
 
-    <p style="font-size: medium;">Esta página web es propiedad y está operado por Fernando Chapa <br> 
+    <p style="font-size: medium;"><small>Esta página web es propiedad y está operado por Fernando Chapa</small> <br> 
     Estos Términos establecen los términos y condiciones bajo los cuales puedes usar nuestra página web y nuestros servicios. 
     Esta página web ofrece a los visitantes una suscripcion a nuestra revista. Al acceder o usar la página web, aceptas haber leído, entendido y aceptado estar sujeto a estos Términos
     </p>
