se agrega indice

--- a/index.html
+++ b/index.html
@@ -11,9 +11,15 @@
 </head>
 <body>
     <h4 style="font-size: x-large; text-align: center; color: red;">Revista: Ajolotes Por Mexico</h4>
-    <img width="300px" src="https://images.pexels.com/photos/10424379/pexels-photo-10424379.png?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" style="float:left;">      
+    <center><img width="300px" src="https://images.pexels.com/photos/10424379/pexels-photo-10424379.png?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" style="float:left;"></center>      
     <p style="text-align: left;">
-    <strong>COLOR</strong> <br>
+        <h1>Enlaces de la Pagina</h1>
+        <ul style="list-style-type: disc; font-size: x-large;">
+            <li><a href="suscribete.html">Suscríbete a nuestra Revista</a></li>
+            <li><a href="contacto.html">Contáctanos</a></li>
+            <li><a href="conocenos.html">¿Quiénes somos?</a></li>
+        </ul>
+    <br><br><br><br><strong>COLOR</strong> <br>
     La mayoría de los ajolotes son negros o marrones moteados, pero también existen variedades con piel blanca y branquias rosadas o rojas.
     </p>
     <p style="text-align: left;">
@@ -23,9 +29,8 @@
     <p style="text-align: left;">
         <strong>PIERNAS</strong> <br>
         Al nacer, los ajolotes no cuentan con patas, las desarrollan unas semanas más tarde.
-    </p><br>
-    
-    <br><p style="text-align: left;">
+    </p>
+    <p style="text-align: left;">
         <em>Homonimos</em> <br>
         Al nacer, los ajolotes no cuentan con patas, las desarrollan unas semanas más tarde.
     </p>
@@ -42,6 +47,6 @@
         Degradación del hábitat, contaminación, pesca, depredadores no nativos, comercio de mascotas.
     </p>
     <p>Informacion saca de: <cite>National Greographic Mexico</cite></p>
-    <a style="font-size: x-large;" href="suscribete.html">Suscribete a nuestra Revista &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a><a style="font-size: x-large;" href="contacto.html">Contáctanos &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a><a style="font-size: x-large;" href="conocenos.html">¿Quienes somos?</a>
+    <a style="font-size: x-large;" href="suscribete.html">Suscribete a nuestra Revista,</a><a style="font-size: x-large;" href="contacto.html">Contáctanos </a><a style="font-size: x-large;" href="conocenos.html">¿Quienes somos?</a>
 </body>
 </html>
