--- a/conocenos.html
+++ b/conocenos.html
@@ -1,29 +1,39 @@
-
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="En esta pagina damos a conocer quien es nuestra organizacion">
+    <meta name="description" content="En esta página damos a conocer quién es nuestra organización">
     <meta name="author" content="Fernando Chapa">
-    <title>Ajolotes En Mexico</title>
+    <title>¿Quiénes somos? - Ajolotes En México</title>
+    <link rel="stylesheet" href="estillos.css">
 </head>
 <body>
-    <h1>¿Quienes somos?</h1>
-    <p style="font-size: larger;">Somos una organizacion que quiere dar a conocer lo importante que son algunas especies en nuestro ecosistema, principalmente aquellas
-    que son representativas de nuestra cultura y un estandarte a nivel mundial.
-    </p>
-    <h1>Nuestra mision</h1>
-    <p style="font-size: larger;">
-        Nuestra mision es ser una organizacion que se preocupa por las probleaticas mundiales actueales como lo es el riesgo
-        que corre la especie del ajolote. <br>
-        Una especie clave en ecosistemas esoecificos en nuestro pais, y que mas alla de ello representa una identidad nacional.
-        <br>
-        A través de nuestra investigacion promovemos el conocimiento y el interes por conocer, respetar y amar una de las especies mas bonitas de este mundo.
-    </p>
-    <p style="font-size: x-large; text-align: center;">El Ajolote Mexicano</p>
-    <center><img width="280px" src="https://thumbs.dreamstime.com/b/un-lindo-personaje-de-caricatura-animal-axolotl-con-sombrero-mexicano-ilustraci%C3%B3n-del-dibujos-animados-animales-211797453.jpg" alt="representacion del ajolote Mexicano"></center>
-    <center><a href="index.html" style="font-size: larger;"> Volver al inicio</a></center> 
+    <nav>
+        <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="suscribete.html">Suscríbete</a></li>
+            <li><a href="contacto.html">Contáctanos</a></li>
+            <li><a href="conocenos.html">¿Quiénes somos?</a></li>
+            <li><a href="tycon.html">Términos y Condiciones</a></li>
+        </ul>
+    </nav>
+    <header>
+        <h1>¿Quiénes somos?</h1>
+    </header>
+    <main>
+        <section>
+            <h2>Nuestra Misión</h2>
+            <p>Somos una organización que quiere dar a conocer lo importante que son algunas especies en nuestro ecosistema, principalmente aquellas que son representativas de nuestra cultura y un estandarte a nivel mundial.</p>
+            <p>Nuestra misión es ser una organización que se preocupa por las problemáticas mundiales actuales como lo es el riesgo que corre la especie del ajolote. Una especie clave en ecosistemas específicos en nuestro país, y que más allá de ello representa una identidad nacional. A través de nuestra investigación promovemos el conocimiento y el interés por conocer, respetar y amar una de las especies más bonitas de este mundo.</p>
+            <h2>El Ajolote Mexicano</h2>
+            <center>
+                <img width="280px" src="https://thumbs.dreamstime.com/b/un-lindo-personaje-de-caricatura-animal-axolotl-con-sombrero-mexicano-ilustraci%C3%B3n-del-dibujos-animados-animales-211797453.jpg" alt="representación del ajolote Mexicano">
+            </center>
+            <center>
+                <a href="index.html" style="font-size: larger;">Volver al inicio</a>
+            </center>
+        </section>
+    </main>
 </body>
 </html>
