--- a/contacto.html
+++ b/contacto.html
@@ -1,43 +1,58 @@
-
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="En esta pagina damos nuestro contacto a la gente">
+    <meta name="description" content="En esta página damos nuestro contacto a la gente">
     <meta name="author" content="Fernando Chapa">
+    <title>Contáctanos - Ajolotes En México</title>
+    <link rel="stylesheet" href="estillos.css">
 </head>
 <body>
-    <h1 style="color: rgb(8, 8, 8);">Contactanos!!</h1>
-    <p style="font-size: x-large;">El nombre de la Organizacion: es Ajolotes por México</p>
-    <p style="font-size: x-large;">Nuestro telefono es: 8125649730</p>
-    <p style="font-size: x-large;">Nuestro correo electrónico: AjolotesMeX@gmail.com</p>
-    <p style="font-size: x-large;">Nuestra ubicación: Zona centro San Nicolas, 1044</p>
-    <center>
-        <p style="font-size: xx-large; color: rgb(7, 7, 7);">Redes Sociales</p>
-    </center>
-        <center>
-            <table border="2" style="font-size: larger; background-color: aquamarine;">
-                <tr>
-                    <th>Red Social</th>
-                    <th>Usuario</th>
-                    <th rowspan="4"><img width="250" src="https://thumbs.dreamstime.com/b/axolotl-personaje-sonriente-rosa-mexicano-monstruo-de-agua-anfibio-lindo-drag%C3%B3n-salamandra-dibujos-animados-fondo-azul-218948049.jpg" alt=""></th>
-                </tr>
-                <tr>
-                    <th>Facebook</th>
-                    <th>Ajolotes por Mexico</th>
-                </tr>
-                <tr>
-                    <th>Instagram</th>
-                    <th>Ajolotes_Mexico</th>
-                </tr>
-                <tr>
-                    <th>Tiktok</th>
-                    <th>AjolotesMX</th>
-                </tr>
-            </table>
-        </center>
-    <center><a href="index.html" style="font-size: larger;"> Volver al inicio</a></center>
+    <nav>
+        <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="suscribete.html">Suscríbete</a></li>
+            <li><a href="contacto.html">Contáctanos</a></li>
+            <li><a href="conocenos.html">¿Quiénes somos?</a></li>
+            <li><a href="tycon.html">Términos y Condiciones</a></li>
+        </ul>
+    </nav>
+    <header>
+        <h1>Contáctanos</h1>
+    </header>
+    <main>
+        <section>
+            <p style="font-size: x-large;">El nombre de la organización: Ajolotes por México</p>
+            <p style="font-size: x-large;">Nuestro teléfono es: 8125649730</p>
+            <p style="font-size: x-large;">Nuestro correo electrónico: AjolotesMeX@gmail.com</p>
+            <p style="font-size: x-large;">Nuestra ubicación: Zona centro San Nicolas, 1044</p>
+            <h2 style="text-align: center;">Redes Sociales</h2>
+            <center>
+                <table border="2" style="font-size: larger; background-color: aquamarine;">
+                    <tr>
+                        <th>Red Social</th>
+                        <th>Usuario</th>
+                        <th rowspan="4"><img width="250" src="https://thumbs.dreamstime.com/b/axolotl-personaje-sonriente-rosa-mexicano-monstruo-de-agua-anfibio-lindo-drag%C3%B3n-salamandra-dibujos-animados-fondo-azul-218948049.jpg" alt="Axolotl"></th>
+                    </tr>
+                    <tr>
+                        <th>Facebook</th>
+                        <td>Ajolotes por México</td>
+                    </tr>
+                    <tr>
+                        <th>Instagram</th>
+                        <td>Ajolotes_México</td>
+                    </tr>
+                    <tr>
+                        <th>TikTok</th>
+                        <td>AjolotesMX</td>
+                    </tr>
+                </table>
+            </center>
+            <center>
+                <a href="index.html" style="font-size: larger;">Volver al inicio</a>
+            </center>
+        </section>
+    </main>
 </body>
 </html>
